--- a/LECTURE4.html
+++ b/LECTURE4.html
@@ -582,7 +582,7 @@ legend(&quot;bottomleft&quot;,col=c(&quot;green&quot;,&quot;red&quot;),lty=c(1,1
 <p><strong>Q:</strong> What happens if population size starts out <em>at</em> carrying capacity? [tophat]<br />
 <strong>Q:</strong> What happens if population size starts out <em>above</em> carrying capacity? [tophat]<br />
 <strong>Q:</strong> Is this a stable equilibrium? [tophat]<br />
-<strong>Q:</strong> Can a wild population ever be at a non-stable equilibrium? What about a stable equilibrium?</p>
+<strong>Q:</strong> Can a wild population ever be at a non-stable equilibrium? What about a stable equilibrium? Why is it important to know about non-stable equilibria?</p>
 <ol start="8" style="list-style-type: decimal">
 <li>Consider the basic logistic growth equation:</li>
 </ol>
@@ -591,9 +591,9 @@ legend(&quot;bottomleft&quot;,col=c(&quot;green&quot;,&quot;red&quot;),lty=c(1,1
 <p><img src="IM6.jpg" /></p>
 <p>Make your initial population size very small compared to carrying capacity.</p>
 <p><strong>Q:</strong> What happens if <span class="math inline">\(r\)</span> is zero? What happens to carrying capacity?<br />
-<strong>Q:</strong> Which population is more likely to be found at or near K in nature? A population with very large <span class="math inline">\(r\)</span> or very small <span class="math inline">\(r\)</span>?</p>
+<strong>Q:</strong> Which population is more likely to be found at or near K in nature? A population with very large <span class="math inline">\(r\)</span> or very small <span class="math inline">\(r\)</span>?<br />
+<strong>Q:</strong> How does this discussion relate to the concept of “r-selected” and “K-selected” species?</p>
 <p><strong>Q:</strong> Is a high value of <span class="math inline">\(r\)</span> good or bad for conservation?</p>
-<p><strong>Q:</strong> How does this discussion relate to the concept of “r-selected” and “K-selected” species?</p>
 <p><a href="LECTURE5.html">–go to next lecture–</a></p>
 </div>
 
