--- a/LAB3.html
+++ b/LAB3.html
@@ -492,16 +492,16 @@ div.tocify {
 <p><strong>Cohort:</strong> A group of organisms of the same species that are born during the same year or the same breeding season</p>
 <p><strong>x:</strong> Age, or time elapsed since the birth date of the cohort (often in years).</p>
 <p><strong>S(x):</strong> Survivors, or Census size – the number of individuals in the study population who survive to time x.</p>
-<p><strong>Birth rate, b(x):</strong> Average number of offspring produced by an individual in age category x.</p>
+<p><strong>Birth rate, b(x):</strong> Average number of offspring produced by an individual in age category x (per-capita birth rate for a given age). NOTE: this parameter is sometimes called m(x) for “maternity”</p>
 <p><strong>Survivorship, l(x):</strong> <span class="math inline">\(l(x) = \frac{S_x}{S_0} \qquad \text{(Eq. 1)}\)</span> , where <span class="math inline">\(S_x\)</span> is the number of survivors from the original cohort at year <span class="math inline">\(x\)</span></p>
-<p><strong>Survival rate, g(x):</strong> <span class="math inline">\(g(x) = \frac{S_{x+1}}{S_x} \qquad \text{(Eq. 2)}\)</span> , where <span class="math inline">\(S_x\)</span> is the number of survivors from the original cohort at year <span class="math inline">\(x\)</span></p>
+<p><strong>Survival rate, g(x):</strong> <span class="math inline">\(g(x) = \frac{S_{x+1}}{S_x} \qquad \text{(Eq. 2)}\)</span> , where <span class="math inline">\(S_x\)</span> is the number of survivors from the original cohort at year <span class="math inline">\(x\)</span> (per-capita survival rate at age x)</p>
 <p><strong>Lifetime reproductive potential:</strong> <span class="math inline">\(R_0 = \sum_{x=0}^k l(x)\cdot b(x) \qquad \text{(Eq. 3)}\)</span>, where <span class="math inline">\(k\)</span> is the maximum possible age. Lifetime reproductive potential is the average number of female offspring produced per female over her entire lifetime.</p>
-<p><strong>Life Expectancy (for a newborn)</strong> can be <em>approximated</em> as: <span class="math inline">\(LE = \sum_{x=0}^{k}l_{mid}(x) \qquad \text{(Eq. 4)}\)</span>, where <span class="math inline">\(l_{mid}(x)=\frac{l(x)+l(x+1)}{2}\)</span> (lmid(x) is the ‘midpoint survivorship’).</p>
+<p><strong>Life Expectancy (for a newborn)</strong> can be <em>approximated</em> as: <span class="math inline">\(LE_0 = \sum_{x=0}^{k}l_{mid}\cdot (x) \qquad \text{(Eq. 4)}\)</span>, where <span class="math inline">\(l_{mid}(x)=\frac{l(x)+l(x+1)}{2}\)</span> (lmid(x) is the approximate survivorship to the midpoint between age x and age x+1).</p>
 <p><strong>Q</strong>: why is the above estimate for life expectancy (LE) <em>approximate</em> and not exact? Is it likely to be biased or unbiased?</p>
-<p><strong>Generation time</strong> is defined as the <em>Average parental age for all the offspring produced by a cohort</em>. This can be computed as: <span class="math inline">\(G = \frac{\sum_{x=0}^{k}l(x)\cdot b(x)\cdot x}{\sum_{x=0}^{k}l(x)\cdot b(x)} \qquad \text{(Eq. 5)}\)</span></p>
+<p><strong>Generation time</strong> is defined as the <em>Average parental age (at birth) for all the offspring produced by a cohort</em>. This can be computed as: <span class="math inline">\(G = \frac{\sum_{x=0}^{k}l(x)\cdot b(x)\cdot x}{\sum_{x=0}^{k}l(x)\cdot b(x)} \qquad \text{(Eq. 5)}\)</span></p>
 <p><strong>Intrinsic rate of growth,</strong> <span class="math inline">\(r\)</span> is defined (to a first-order approximation) as: <span class="math inline">\(r = \frac{ln(R_0)}{G} \qquad \text{(Eq. 6)}\)</span></p>
 <p>NOTE: the Gotelli book describes a more exact way to compute the intrinsic rate of growth from life tables, called the <em>Euler method</em>.</p>
-<p>One more concept I want to introduce here is <strong>reproductive value</strong>, or V(y). This represents the expected future reproductive output of an individual of age y, <em>discounted by the intrinsic rate of growth</em>: <span class="math inline">\(V(y) = \frac{e^{ry}}{l_y} \cdot \sum_{x=y+1}^{k}e^{-rx}l_xb_x \qquad \text{(Eq. 7)}\)</span>. Different individuals in a population tend to have different “value” in terms of contributing to future generations. Caswell (2001) said “The amount of future reproduction, the probability of surviving to realize it, and the time required for the offspring to be produced all enter into the reproductive value of an age-class”. Knowing something about the relative “value” of different individuals in a population can help managers decide which individuals to translocate, or to harvest, or cull from a population. Therefore, reproductive value is critical for applied population ecology!</p>
+<p>One more concept I want to introduce here is <strong>reproductive value</strong>, or V(x). This represents the expected future reproductive output of an individual of age x, <em>discounted by the intrinsic rate of growth</em>: <span class="math inline">\(V(x) = \frac{e^{rx}}{l_x} \cdot \sum_{y=x+1}^{k}e^{-ry}l_yb_y \qquad \text{(Eq. 7)}\)</span>. Different individuals in a population tend to have different “value” in terms of contributing to future generations. Caswell (2001) said “The amount of future reproduction, the probability of surviving to realize it, and the time required for the offspring to be produced all enter into the reproductive value of an age-class”. Knowing something about the relative “value” of different individuals in a population can help managers decide which individuals to translocate, or to harvest, or cull from a population. Therefore, reproductive value is critical for applied population ecology! Reproductive Value also factors heavily in evolutionary studies and life history theory.</p>
 <p><strong>Q:</strong> Why is the reproductive value discounted by the population growth rate??</p>
 </div>
 </div>
@@ -567,7 +567,7 @@ div.tocify {
 <p>1b. What is the lifetime reproductive potential, <span class="math inline">\(R_0\)</span> for this population? Is this population growing, declining or stable?</p>
 <p>1c. What is the mean life expectancy, <span class="math inline">\(LE\)</span>, and generation time, <span class="math inline">\(G\)</span> for this population? What happens to your generation time estimate if “age 1” individuals do not reproduce – that is, if b(1) is set to zero?</p>
 <p>1d. What is the reproductive value(<span class="math inline">\(V\)</span>) for each age (x) in this population? Which age has the highest reproductive value? If you were to remove some of this population to translocate to another island (to start a new population), why might you select individuals at this age (that is, the age with highest reproductive value)?</p>
-<p>1e. Are the vital rates in this population <strong>Density-dependent</strong>? If so, explain your reasoning. If not, explain what additional information you would need to evaluate density-dependence in this population.</p>
+<p>1e. Are the vital rates (e.g., b(x) or g(x)) in this population <strong>Density-dependent</strong>? If so, explain your reasoning. If not, explain what additional information you would need to evaluate density-dependence in this population.</p>
 </div>
 </div>
 <div id="exercise-2-another-life-table-analysis" class="section level2">
@@ -582,7 +582,7 @@ div.tocify {
 <h3>QUESTIONS, Exercise 2 (more advanced life table analysis):</h3>
 <p>2a. [for the Uinta squirrel life table] Compare the two life tables using the following major life-table metrics: <span class="math inline">\(R0\)</span>, <span class="math inline">\(G\)</span>, and <span class="math inline">\(r\)</span> (extra credit: compute the reproductive value <span class="math inline">\(V\)</span> for each value of cohort age). What changes do you notice between these two life tables?</p>
 <p>2b. [for the Uinta squirrel life table] Is generation time (<span class="math inline">\(G\)</span>) an intrinsic trait of a species, or can it vary as a function of factors like forage quality? How could you test this in Excel? What l(x) or b(x) entries might change in the Excel spreadsheet if the population experienced a substantial improvement in forage quality? Try it- describe what you changed, and how (and if) it affected generation time.</p>
-<p>2c. [<strong>return to the black robin example</strong>] Imagine you have the following initial population of black robins: 10 individuals of age 2, 10 individuals of age 3 and 10 individuals of age 4. How would you <strong>simulate</strong> the abundance of robins in each of the 6 age classes next year? Try it, and explain how you got your answer!</p>
+<p>2c. [<strong>return to the black robin example</strong>] Imagine you have the following initial population of black robins: 10 individuals of age 2, 10 individuals of age 3 and 10 individuals of age 4. How would you <strong>simulate</strong> the abundance of robins in each of the 6 age classes next year? Try it, and show how you got your answer!</p>
 </div>
 </div>
 <div id="exercise-3-age-structured-models-in-insightmaker" class="section level2">
@@ -615,12 +615,12 @@ div.tocify {
 <h2>Exercise 4: more complex age-structured models in InsightMaker!</h2>
 <p>Try to implement the following model (adding onto the previous age-structured model in InsightMaker). <em>If the total population (all three age classes combined!) exceeds 75 individuals, then recruitment rates drop to 25% of normal rates.</em></p>
 <p>4a. Please provide your full InsightMaker model (share with instructors and send as a link).</p>
-<p>4b. Change the Age 1 mortality rate to 0.3. Run the simulation starting with 75 individuals, all in Age class 1. What happens? Is this a <strong>stochastic</strong> model (different results every time you run the model, even with the same initial conditions)? If not, why does it <em>appear</em> to have a random component?</p>
+<p>4b. Change the Age 1 mortality rate to 0.3. Run the simulation starting with 75 individuals, all in Age class 1. What happens? Is this a <strong>stochastic</strong> model (different results every time you run the model, even with the same initial conditions)? If not, why does the population fluctate back and forth as if it had a random component?</p>
 <p>##Checklist for Lab 3 completion</p>
 <ul>
 <li>Please type your responses into one Word document and submit <em>using WebCampus</em>!</li>
 </ul>
-<p><strong><em>Due Feb. 22 at midnight.</em></strong></p>
+<p><strong><em>Due Feb. 28 at midnight.</em></strong></p>
 <ul>
 <li>Word document with short answers
 <ul>
