--- a/LAB3.html
+++ b/LAB3.html
@@ -616,8 +616,8 @@ div.tocify {
 <div id="exercise-4-more-complex-age-structured-models-in-insightmaker" class="section level2">
 <h2>Exercise 4: more complex age-structured models in InsightMaker!</h2>
 <p>Try to implement the following model (adding onto the previous age-structured model in InsightMaker). <em>If the total population (all three age classes combined!) exceeds 75 individuals, then recruitment rates drop to 25% of normal rates.</em></p>
-<p>4a. Please provide your full InsightMaker model (share with instructors and send as a link).</p>
-<p>4b. Change the Age 1 mortality rate to 0.3 (i.e., change the survival/transition rate to 0.7). Run the simulation starting with 75 individuals, all in Age class 1. What happens? Is this a <strong>stochastic</strong> model (different results every time you run the model, even with the same initial conditions)? If not, why does the population fluctate back and forth as if it had a random component?</p>
+<p>4a. Please provide your full InsightMaker model (copy URL in the appropriate place in WebCampus).</p>
+<p>4b. Change the Age 1 mortality rate to 0.3 (i.e., change the survival/transition rate to 0.7). Run the simulation starting with 75 individuals, all in Age class 1. What happens? Is this a <strong>stochastic</strong> model (different results every time you run the model, even with the same initial conditions)? If not, why does the population fluctuate back and forth as if it had a random component?</p>
 <p>##Checklist for Lab 3 completion</p>
 <ul>
 <li>Please type your responses into one Word document and submit <em>using WebCampus</em>!</li>
