--- a/LECTURE6.html
+++ b/LECTURE6.html
@@ -629,7 +629,7 @@ barplot(Death_rate,xlab=&quot;Age&quot;,ylab=&quot;d, per-capita death rate&quot
 <li><p>Load up an age-structured model in InsightMaker. You can clone <a href="https://insightmaker.com/insight/70809/Age-structured-population">this one, here</a>.</p>
 <p>4a. Initialize the population like the spadefoot toad example from above- with only the first (juvenile) age class. What population dynamics occur at the beginning of the simulation? What about the end of the simulation?</p>
 <p>4b. Can you tweak the initial abundance of juveniles, subadults and adults so that the population exhibits smooth exponential growth for all three age classes (and the population as a whole)? This is called <strong>Stable Age Distribution (S.A.D.)</strong></p>
-<p>4c. Now change the vital rates (<em>Juv mort rate</em>, <em>Sub mort rate</em>, <em>Transition rate to Subadult</em>, etc.). Is population growth still smooth? If not, can you find the <em>Stable Age Distribution</em> now??</p>
+<p>4c. Now change the vital rates (<em>Juv mort rate</em>, <em>Sub mort rate</em>, <em>Transition rate to Subadult</em>, etc.). Is population growth still smooth? If not, can you find the NEW <em>Stable Age Distribution</em>??</p>
 <p>4d. Return to the initial model (<a href="https://insightmaker.com/insight/70809/Age-structured-population">this one, here</a>). Now change the <strong>Adult mort rate</strong> to 0.65. What happens? Is this a growing population?</p></li>
 </ol>
 <p><strong>Q</strong>: (using the model from step 4d, with adult mortality set at 0.65) How many subadults would need to be added to the population each year (population supplementation) to maintain a stable or growing population of &gt;20 adults? [tophat]</p>
