--- a/LECTURE6.html
+++ b/LECTURE6.html
@@ -622,7 +622,7 @@ barplot(Death_rate,xlab=&quot;Age&quot;,ylab=&quot;d, per-capita death rate&quot
 <li>Now, can you compute the <em>intrinsic rate of growth</em> (<span class="math inline">\(r\)</span>) for this age-structured population?</li>
 </ol>
 <p>To a first-order approximation, you can use this equation:</p>
-<p><span class="math inline">\(r = \frac{ln(R_0)}{G}\)</span></p>
+<p><span class="math inline">\(r = \frac{ln(R_0)}{G}\)</span> [tophat]</p>
 <p>Just looking at this equation, you see that organisms with longer generation times (<span class="math inline">\(G\)</span>) have slower intrinsic rates of growth, all else being equal.</p>
 <p><strong>Q:</strong> Implement this equation in Excel. Is this an exponentially growing population?</p>
 <ol start="4" style="list-style-type: decimal">
