--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@ div.tocify {
 
 
 <p><strong>Instructor:</strong> Kevin Shoemaker<br />
-<strong>Teaching Assistant</strong> Jason Wurtz (jwurtz_at_nevada_dot_unr_dot_edu)<br />
+<strong>Teaching Assistant</strong> Megan Osterhout (mosterhout_at_gmail_dot_com)<br />
 <strong>Website</strong>: <a href="http://naes.unr.edu/shoemaker/teaching/NRES-470/index.html">naes.unr.edu/shoemaker/teaching/NRES-470</a><br />
 <strong>Phone</strong>: (775)682-7449<br />
 <strong>Email</strong>: kevinshoemaker_at_unr_dot_edu</p>
@@ -497,7 +497,7 @@ div.tocify {
 <ul>
 <li>Shoemaker: Wednesdays at 11am (1 hour) (FA 220E)<br />
 </li>
-<li>Wurtz: Tuesdays at noon (1 hour) (FA 235)</li>
+<li>Osterhout: Tuesdays at noon (1 hour) (FA 231)</li>
 </ul>
 </div>
 <div id="texts" class="section level3">
