--- a/FINAL_PROJECTS.html
+++ b/FINAL_PROJECTS.html
@@ -501,7 +501,7 @@ div.tocify {
 <ul>
 <li><strong>PROPOSAL:</strong> Due Mon March 9!</li>
 <li><strong>INITIAL PVA</strong> Due Fri April 10: description of how your PVA model works and where the parameter estimates come from.</li>
-<li><strong>SEND DRAFT FOR PEER REVIEW</strong> Due April 22 (for peer review on April 24)</li>
+<li><strong>SEND DRAFT FOR PEER REVIEW</strong> Due April 21 by midnight (for peer review on April 24)</li>
 <li><strong>DRAFT FINAL PAPER:</strong> Due Mon April 27</li>
 <li><strong>FINAL FINAL PAPER:</strong> Due Wed May 13</li>
 <li><strong>FINAL PRESENTATIONS:</strong> Fri Apr 24 and May 1 in lab!</li>
