--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@ div.tocify {
 <ul>
 <li>Shoemaker: Wednesdays at 11am (1 hour) (FA 220E)<br />
 </li>
-<li>Osterhout: Tuesdays at noon (1 hour) (FA 231)</li>
+<li>Osterhout: Tuesdays at 11am (1 hour) (FA 231)</li>
 </ul>
 </div>
 <div id="texts" class="section level3">
